--- a/grid.css
+++ b/grid.css
@@ -42,10 +42,9 @@ display: table;
 
 /*---header-----*/
 
-
-.header img{
-    width:40%;
-    text-align: center;
+.logo {
+    text-align: left;
+    width: 50%;
 }
 
 .home_form {
@@ -53,7 +52,6 @@ display: table;
     padding-right: 10px;
     text-align: center;
     font-size:20px;
-
 }
 
 #login{
@@ -75,11 +73,6 @@ display: table;
     border-style: solid;
     }
 
-.col-2-head {
-    padding:0px;
-    width: 25%;
-}
-
 .col-12-bar {
     width: 100%;
     background-color: #E2DAD5;
@@ -92,30 +85,6 @@ display: table;
     text-align: center;
 }
 
-
-.home_form {
-    padding:4px;
-    font-size:20px;
-    color: gray;
-    background:none;
-}
-
-.header {
-    text-align: center;
-    background-color: #E2DAD5;
-}
-
-.rowHeader{
-    text-align: center;
-    color: gray;
-}
-
-.rowHeader::after {
-content: "";
-clear: both;
-display: table;
-}
-
 .headerBTN {
     padding:4px;
     font-size:20px;
@@ -125,7 +94,6 @@ display: table;
     border-width: 1px;
     border-style: solid none solid none;
     cursor: pointer;
-
  }
 
  .headerBTN:hover {
@@ -161,14 +129,11 @@ input {
 }
 
 form {
- /*   border: 3px solid #f1f1f1;*/
     direction: rtl;
-
 }
 
 #main_search{
     color: gray;
-
 }
 
 .col-4-location {
@@ -187,25 +152,24 @@ form {
     cursor: pointer;
 }
 
+.button1:hover {
+    background-color: #E2DAD5;
+    color: #48422a;
+}
+
 .button1_left {
-    width: 90%;
-    font-size: 30px;
+    width: 50%;
+    font-size: 20px;
     color: #f1f1f1;
     background-color: #9c7c81;
     border: none;
     cursor: pointer;
-    text-align: left;
+    text-align: center;
 }
 
-.button1:hover {
+.button1_left:hover {
     background-color: #E2DAD5;
     color: #48422a;
-
-}
-
-#logo {
-    text-align: left;
-    width: 50%;
 }
 
 /*---Left_location-----*/
@@ -217,7 +181,7 @@ form {
 
 #location1:hover{
     width: 30%;
-    }
+}
 
 /*---footer-----*/
 
@@ -239,7 +203,7 @@ display: table;
 .footerBTN {
     padding:0px;
     font-size:25px;
-    color: #f1f1f1;
+    color: gray;
     background:none;
     border-color: #ACACAC;
     border-width: 1px;
@@ -260,9 +224,10 @@ display: table;
 
 #FootCont {
     font-size:25px;
-    color: #f1f1f1;
-    text-align: left;
+    color: gray;
+    text-align: center;
     font-family: font1;
+    background: #E2DAD5;
 }
 
 .col-4-footer {
@@ -272,7 +237,9 @@ display: table;
 
 .col-12-footer {
     width: 100%;
-    background-color: #9c7c81;
-    color: #f1f1f1;
+    background-color: #E2DAD5;
+    color: gray;
+    text-align: center;
+
 }
 
