--- a/header_and_footer.css
+++ b/header_and_footer.css
@@ -42,6 +42,11 @@ display: table;
 
 /*---header-----*/
 
+.logo {
+    text-align: left;
+    width: 50%;
+}
+
 #login{
     border: none;
     padding-right: 10px;
@@ -100,6 +105,20 @@ display: table;
 
 
 /*---footer-----*/
+.button1_left {
+    width: 50%;
+    font-size: 20px;
+    color: #f1f1f1;
+    background-color: #9c7c81;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+
+.button1_left:hover {
+    background-color: #E2DAD5;
+    color: #48422a;
+}
 
 .footer {
     text-align: center;
@@ -119,7 +138,7 @@ display: table;
 .footerBTN {
     padding:0px;
     font-size:25px;
-    color: #f1f1f1;
+    color: gray;
     background:none;
     border-color: #ACACAC;
     border-width: 1px;
@@ -133,11 +152,17 @@ display: table;
     padding-right:4px;
  }
 
+.footer img{
+    width:30%;
+    text-align: center;
+}
+
 #FootCont {
     font-size:25px;
-    color: #f1f1f1;
-    text-align: left;
+    color: gray;
+    text-align: center;
     font-family: font1;
+    background: #E2DAD5;
 }
 
 .col-4-footer {
@@ -147,6 +172,16 @@ display: table;
 
 .col-12-footer {
     width: 100%;
-    background-color: #9c7c81;
-    color: #f1f1f1;
+    background-color: #E2DAD5;
+    color: gray;
+    text-align: center;
+
+}
+
+#FootCont {
+    font-size:25px;
+    color: gray;
+    text-align: center;
+    font-family: font1;
+    background: #E2DAD5;
 }
