--- a/signup.css
+++ b/signup.css
@@ -1,4 +1,5 @@
 /* CSS HEX*/
+/* CSS HEX*/
 :root {
     --timberwolf: #e2dad5ff;
     --alabaster: #ede9e2ff;
@@ -8,14 +9,13 @@
 
 @font-face {
     font-family: font1;
-    src: url(AmaticSC-Bold.ttf);
+    src: url(Amatic_SC);
 }
 
 
 * {
     box-sizing: border-box;
-    background-coor: #EDE9E2;
-    font-family: font1
+    font-family: font1;
 }
 
 [class*="col-"] {
@@ -30,6 +30,7 @@
     display: table;
 }
 
+
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
@@ -43,10 +44,9 @@
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
+
 .title1 {
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 50px;
     font-size: 50px;
 }
 
@@ -60,41 +60,34 @@ form {
     direction: rtl;
 }
 
-/* Full-width inputs */
-input[type=email], input[type=password] {
-    direction: rtl;
+/* Full-width input fields */
+input[type=text], input[type=password] {
     width: 40%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
+    border: none;
     border: 1px solid #ccc;
-    box-sizing: border-box;
-    background: #f1f1f1;
-
 }
+
+input[type=text]:focus, input[type=password]:focus {
+    outline: none;
+}
+
 
 .button1 {
     width: 40%;
     font-size: 30px;
     color: #48422a;
-    background-color: #9c7c81;
     border: none;
     cursor: pointer;
 }
 
 .button1:hover {
-    background-color: #E2DAD5;
     color: #48422a;
 }
 
-
-/* Center the avatar image inside this container */
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
-}
-
-.logbar {
+.resbar {
     width: 80%;
     opacity: 0.5;
 }
