--- a/grid.css
+++ b/grid.css
@@ -12,7 +12,7 @@ src: url(AmaticSC-Bold.ttf);
 [class*="col-"] {
   float: left;
   padding: 15px;
-/*  border: 1px solid red;*/
+  /* border: 1px solid red; */
 }
 
 
@@ -43,13 +43,13 @@ display: table;
     text-align: center;
 }
 
-.home_form {
+/* .home_form {
     border: none;
     padding-right: 10px;
     text-align: center;
     font-size:20px;
 
-}
+} */
 
 #login{
     border: none;
@@ -142,6 +142,7 @@ display: table;
 
 .labels{
     font-size: 30px;
+    
 }
 
 input {
@@ -271,3 +272,43 @@ display: table;
     color: #f1f1f1;
 }
 
+/* #searchBar{
+    all: unset;
+    font: 16px system-ui;
+    color: rgb(4, 46, 160);
+    height: 100%;
+    width: 100%;
+    padding: 6px 10px;
+  
+  }
+  
+  ::placeholder {
+      color: rgb(3, 3, 3);
+      opacity: 0.7; 
+    }
+  
+  #SB{
+    width: 300px;
+    height: 44px;
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    border: solid 2px black;
+  }
+  
+  button {
+    all: unset;
+    cursor: pointer;
+    width: 44px;
+    height: 44px;
+  }
+    
+    svg {
+      color: rgb(2, 5, 182);
+      fill: currentColor;
+      width: 24px;
+      height: 24px;
+      padding: 10px;
+    }
+   */
+    
