--- a/sign.css
+++ b/sign.css
@@ -91,3 +91,12 @@ input[type=text]:focus, input[type=password]:focus {
     width: 80%;
     opacity: 0.5;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  opacity: 0.9
+}
+
