--- a/header_and_footer.css
+++ b/header_and_footer.css
@@ -1,4 +1,3 @@
-/*---Main-----*/
 * {
     box-sizing: border-box;
     font-family: font1;
@@ -9,26 +8,24 @@ font-family: font1;
 src: url(AmaticSC-Bold.ttf);
 }
 
-@media only screen and (max-width: 1000px){
-    body{
-        background-color: mistyrose;
-    }
-}
 
 [class*="col-"] {
   float: left;
   padding: 15px;
-<<<<<<< HEAD
-  /* border: 1px solid red; */
-=======
   border: 1px solid red;
->>>>>>> de8fde083770cbadfdffef29d617a11b99b0c4a3
+
 }
 
 .row::after {
 content: "";
 clear: both;
 display: table;
+}
+
+@media only screen and (max-width: 1000px){
+    body{
+        background-color: mistyrose;
+    }
 }
 
 .col-1 {width: 8.33%;}
@@ -43,17 +40,21 @@ display: table;
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
-
 /*---header-----*/
 
-<<<<<<< HEAD
-=======
 .logo {
     text-align: left;
     width: 50%;
 }
 
->>>>>>> de8fde083770cbadfdffef29d617a11b99b0c4a3
+.home_form {
+    border: none;
+    padding-right: 10px;
+    text-align: center;
+    font-size:20px;
+}
+
+
 #login{
     border: none;
     padding-right: 10px;
@@ -85,7 +86,6 @@ display: table;
     text-align: center;
 }
 
-
 .headerBTN {
     padding:4px;
     font-size:20px;
@@ -95,7 +95,6 @@ display: table;
     border-width: 1px;
     border-style: solid none solid none;
     cursor: pointer;
-
  }
 
  .headerBTN:hover {
@@ -105,30 +104,7 @@ display: table;
     cursor: pointer;
  }
 
- #logo {
-    text-align: left;
-    width: 50%;
-}
-
-
 /*---footer-----*/
-<<<<<<< HEAD
-=======
-.button1_left {
-    width: 50%;
-    font-size: 20px;
-    color: #f1f1f1;
-    background-color: #9c7c81;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-}
-
-.button1_left:hover {
-    background-color: #E2DAD5;
-    color: #48422a;
-}
->>>>>>> de8fde083770cbadfdffef29d617a11b99b0c4a3
 
 .footer {
     text-align: center;
@@ -148,11 +124,7 @@ display: table;
 .footerBTN {
     padding:0px;
     font-size:25px;
-<<<<<<< HEAD
-    color: #f1f1f1;
-=======
     color: gray;
->>>>>>> de8fde083770cbadfdffef29d617a11b99b0c4a3
     background:none;
     border-color: #ACACAC;
     border-width: 1px;
@@ -166,13 +138,6 @@ display: table;
     padding-right:4px;
  }
 
-<<<<<<< HEAD
-#FootCont {
-    font-size:25px;
-    color: #f1f1f1;
-    text-align: left;
-    font-family: font1;
-=======
 .footer img{
     width:30%;
     text-align: center;
@@ -184,7 +149,6 @@ display: table;
     text-align: center;
     font-family: font1;
     background: #E2DAD5;
->>>>>>> de8fde083770cbadfdffef29d617a11b99b0c4a3
 }
 
 .col-4-footer {
@@ -194,22 +158,19 @@ display: table;
 
 .col-12-footer {
     width: 100%;
-<<<<<<< HEAD
-    background-color: #9c7c81;
-    color: #f1f1f1;
-}
-=======
     background-color: #E2DAD5;
     color: gray;
     text-align: center;
 
 }
 
-#FootCont {
-    font-size:25px;
-    color: gray;
+.button1_left {
+    width: 50%;
+    font-size: 20px;
+    color: #f1f1f1;
+    background-color: #9c7c81;
+    border: none;
+    cursor: pointer;
     text-align: center;
-    font-family: font1;
-    background: #E2DAD5;
 }
->>>>>>> de8fde083770cbadfdffef29d617a11b99b0c4a3
+
