--- a/sign.css
+++ b/sign.css
@@ -1,35 +1,32 @@
-/* CSS HEX*/
-/* CSS HEX*/
-:root {
-    --timberwolf: #e2dad5ff;
-    --alabaster: #ede9e2ff;
-    --bone: #e6e0d2ff;
-    --alabaster-2: #e5e1d8ff;
-}
-
-@font-face {
-    font-family: font1;
-    src: url(Amatic_SC);
-}
-
-
 * {
     box-sizing: border-box;
     font-family: font1;
 }
 
-[class*="col-"] {
-    text-align: center;
-    padding: 15px;
+@font-face {
+font-family: font1;
+src: url(AmaticSC-Bold.ttf);
 }
 
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+  border: 1px solid red;
+
+}
 
 .row::after {
-    content: "";
-    clear: both;
-    display: table;
+content: "";
+clear: both;
+display: table;
 }
 
+@media only screen and (max-width: 1000px){
+    body{
+        background-color: mistyrose;
+    }
+}
 
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
@@ -43,6 +40,141 @@
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+/*---header-----*/
+
+.logo {
+    text-align: left;
+    width: 50%;
+}
+
+.home_form {
+    border: none;
+    padding-right: 10px;
+    text-align: center;
+    font-size:20px;
+}
+
+
+#login{
+    border: none;
+    padding-right: 10px;
+    text-align: center;
+    font-size:20px;
+    border-color: #ACACAC;
+    border-width: 1px;
+    border-style: solid;
+}
+
+#login:hover{
+    border: none;
+    font-size:30px;
+    padding-right:4px;
+    border-color: #ACACAC;
+    border-width: 1px;
+    border-style: solid;
+    }
+
+.col-12-bar {
+    width: 100%;
+    background-color: #E2DAD5;
+    text-align: center;
+}
+
+.col-2-bar {
+    width: 16.66%;
+    background-color: #E2DAD5;
+    text-align: center;
+}
+
+.headerBTN {
+    padding:4px;
+    font-size:20px;
+    color: gray;
+    background:none;
+    border-color: #ACACAC;
+    border-width: 1px;
+    border-style: solid none solid none;
+    cursor: pointer;
+ }
+
+ .headerBTN:hover {
+    padding:0px;
+    font-size:40px;
+    border-style: none;
+    cursor: pointer;
+ }
+
+/*---footer-----*/
+
+.footer {
+    text-align: center;
+}
+
+.rowFooter{
+    text-align: center;
+    color: gray;
+}
+
+.rowFooter::after {
+content: "";
+clear: both;
+display: table;
+}
+
+.footerBTN {
+    padding:0px;
+    font-size:25px;
+    color: gray;
+    background:none;
+    border-color: #ACACAC;
+    border-width: 1px;
+    border-style: solid none solid none;
+    cursor: pointer;
+ }
+
+ .footerBTN:hover {
+    border-color: #E2DAD5;
+    font-size:30px;
+    padding-right:4px;
+ }
+
+.footer img{
+    width:30%;
+    text-align: center;
+}
+
+#FootCont {
+    font-size:25px;
+    color: gray;
+    text-align: center;
+    font-family: font1;
+    background: #E2DAD5;
+}
+
+.col-4-footer {
+    width: 33.33%;
+    color: #f1f1f1;
+}
+
+.col-12-footer {
+    width: 100%;
+    background-color: #E2DAD5;
+    color: gray;
+    text-align: center;
+
+}
+
+.button1_left {
+    width: 50%;
+    font-size: 20px;
+    color: #f1f1f1;
+    background-color: #9c7c81;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+
+/*---sign-----*/
 
 
 .title1 {
@@ -72,6 +204,11 @@ input[type=text], input[type=password] {
 
 input[type=text]:focus, input[type=password]:focus {
     outline: none;
+}
+
+#main_search{
+    color: gray;
+    text-align: center;
 }
 
 
