--- a/SearchResults.css
+++ b/SearchResults.css
@@ -101,6 +101,21 @@ display: table;
 
 /*---footer-----*/
 
+.button1_left {
+  width: 50%;
+  font-size: 20px;
+  color: #f1f1f1;
+  background-color: #9c7c81;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+}
+
+.button1_left:hover {
+  background-color: #E2DAD5;
+  color: #48422a;
+}
+
 .footer {
   text-align: center;
 }
@@ -119,7 +134,7 @@ display: table;
 .footerBTN {
   padding:0px;
   font-size:25px;
-  color: #f1f1f1;
+  color: gray;
   background:none;
   border-color: #ACACAC;
   border-width: 1px;
@@ -133,11 +148,17 @@ display: table;
   padding-right:4px;
 }
 
+.footer img{
+  width:30%;
+  text-align: center;
+}
+
 #FootCont {
   font-size:25px;
-  color: #f1f1f1;
-  text-align: left;
+  color: gray;
+  text-align: center;
   font-family: font1;
+  background: #E2DAD5;
 }
 
 .col-4-footer {
@@ -147,8 +168,18 @@ display: table;
 
 .col-12-footer {
   width: 100%;
-  background-color: #9c7c81;
-  color: #f1f1f1;
+  background-color: #E2DAD5;
+  color: gray;
+  text-align: center;
+
+}
+
+#FootCont {
+  font-size:25px;
+  color: gray;
+  text-align: center;
+  font-family: font1;
+  background: #E2DAD5;
 }
 
 
@@ -178,7 +209,7 @@ display: table;
 }
 
 .searchButton {
-  width: 20%;  
+  width: 20%;
   border: 1px solid #9c7c81;
   background: #9c7c81;
   text-align: center;
@@ -191,14 +222,14 @@ display: table;
 #Left{
   color: gray;
   font-size: 20px;
-  background-color: #f1f1f1;    
+  background-color: #f1f1f1;
 }
 
 .opt{
   font-weight: bold;
 }
 
-.resturant{  
+.resturant{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -218,6 +249,72 @@ display: table;
   text-align: center;
 }
 
+.website_button{
+  appearance: none;
+  background-color: #FAFBFC;
+  border: 1px solid rgba(27, 31, 35, 0.15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
+  box-sizing: border-box;
+  color: #24292E;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  padding: 6px 16px;
+  position: relative;
+  transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+  word-wrap: break-word;
+  text-decoration: none;
+}
+
+
+
+
+.website_button:hover {
+  background-color: #F3F4F6;
+  text-decoration: none;
+  transition-duration: 0.1s;
+}
+
+.website_button:disabled {
+  background-color: #FAFBFC;
+  border-color: rgba(27, 31, 35, 0.15);
+  color: #959DA5;
+  cursor: default;
+}
+
+.website_button:active {
+  background-color: #EDEFF2;
+  box-shadow: rgba(225, 228, 232, 0.2) 0 1px 0 inset;
+  transition: none 0s;
+}
+
+.website_button:focus {
+  outline: 1px transparent;
+}
+
+.website_button:before {
+  display: none;
+}
+
+.website_button:-webkit-details-marker {
+  display: none;
+}
+
+#MyResHeader{
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+}
 
 
 /*Resize the wrap to see the search bar change!*/
