--- a/about.css
+++ b/about.css
@@ -17,7 +17,7 @@ src: url(AmaticSC-Bold.ttf);
 [class*="col-"] {
   float: left;
   padding: 15px;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 .row::after {
@@ -185,35 +185,48 @@ display: table;
     background: #E2DAD5;
 }
 
+#background {
+    background-color: seashell;
+}
 
-.frame {
+
+#frame {
   height: 90vh;
-  width: 90vw;
-  margin: 5vh 5vw;
+  width: 100%;
   background-color: #eee;
   background-position: center;
   background-size: cover;
-
-  animation: image 4s infinite alternate;
+  animation: image 10s infinite alternate;
 }
 
 @keyframes image {
   0% {
     background-image: url('https://images.squarespace-cdn.com/content/v1/53b839afe4b07ea978436183/1608506169128-S6KYNEV61LEP5MS1UIH4/traditional-food-around-the-world-Travlinmad.jpg');
   }
+  25% {
+    background-image: url('https://grill164.com/wp-content/uploads/2018/03/dan-gold-105699-scaled.jpg');
+  }
   50% {
-    background-image: url('https://curlytales.com/wp-content/uploads/2019/10/images-11-1.jpg');
+    background-image: url('https://c.stocksy.com/a/1aN400/z9/1043957.jpg');
+  }
+  75% {
+    background-image: url('https://im1.dineout.co.in/images/uploads/restaurant/sharpen/2/e/d/p29410-15743151555dd62493bdda1.jpg?tr=tr:n-xlarge');
   }
   100% {
-    background-image: url('https://media.istockphoto.com/photos/people-laughing-at-dinner-table-picture-id1181396290?k=20&m=1181396290&s=612x612&w=0&h=HuHaBwesWsMnlZeoBOMqsa_xbo6H0nc3Vfa2CN_We2g=');
+    background-image: url('https://images.pexels.com/photos/1537635/pexels-photo-1537635.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
   }
 }
 
-#About {
+.About {
     text-align: center;
+    color: dimgray;
 }
 
 #images {
     width: 20%;
+    text-align: center;
+}
+
+.center {
     text-align: center;
 }
