--- a/header_and_footer.css
+++ b/header_and_footer.css
@@ -12,7 +12,7 @@ src: url(AmaticSC-Bold.ttf);
 [class*="col-"] {
   float: left;
   padding: 15px;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 
 }
 
@@ -143,7 +143,7 @@ display: table;
     text-align: center;
 }
 
-#FootCont {
+.FootCont {
     font-size:25px;
     color: gray;
     text-align: center;
