--- a/home_grid.css
+++ b/home_grid.css
@@ -12,7 +12,7 @@ src: url(AmaticSC-Bold.ttf);
 [class*="col-"] {
   float: left;
   padding: 15px;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 
 }
 
@@ -42,6 +42,7 @@ display: table;
 .col-12 {width: 100%;}
 
 /*---header-----*/
+
 
 .logo {
     text-align: left;
@@ -225,7 +226,7 @@ display: table;
     text-align: center;
 }
 
-#FootCont {
+.FootCont {
     font-size:25px;
     color: gray;
     text-align: center;
