--- a/sign.css
+++ b/sign.css
@@ -12,7 +12,7 @@ src: url(AmaticSC-Bold.ttf);
 [class*="col-"] {
   float: left;
   padding: 15px;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 
 }
 
@@ -176,7 +176,6 @@ display: table;
 
 /*---sign-----*/
 
-
 .title1 {
     text-align: center;
     font-size: 50px;
@@ -209,18 +208,21 @@ input[type=text]:focus, input[type=password]:focus {
 #main_search{
     color: gray;
     text-align: center;
+    border: 17px solid #9c7c81;
 }
 
 
 .button1 {
-    width: 40%;
+    width: 60%;
     font-size: 30px;
-    color: #48422a;
+    color: #f1f1f1;
+    background-color: #9c7c81;
     border: none;
     cursor: pointer;
 }
 
 .button1:hover {
+    background-color: #E2DAD5;
     color: #48422a;
 }
 
