--- a/header_and_footer.css
+++ b/header_and_footer.css
@@ -1,13 +1,7 @@
 * {
     box-sizing: border-box;
-    font-family: font1;
+    font-family: 'Martel', serif;
 }
-
-@font-face {
-font-family: font1;
-src: url(AmaticSC-Bold.ttf);
-}
-
 
 [class*="col-"] {
   float: left;
