--- a/sign.css
+++ b/sign.css
@@ -235,3 +235,9 @@ input[type=text]:focus, input[type=password]:focus {
   opacity: 0.9
 }
 
+.contact {
+    text-decoration: none;
+    color: black;
+
+}
+
